--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -664,7 +664,7 @@ jobs:
         @v 幕 '"  "'
         @v 基 '"byte [mem_base + "'
         @v 閉 '"]"'
-        @v 影 '"qword [rsp + 32]"'
+        @v 影 '"qword [rsp + r12*8 + 32]"'
 
         @v 転 '"mov "'
         @v 汲 '"lea "'
@@ -939,7 +939,7 @@ jobs:
         @v 幕 '"  "'
         @v 基 '"byte [mem_base + "'
         @v 閉 '"]"'
-        @v 影 '"qword [rsp + 32]"'
+        @v 影 '"qword [rsp + r12*8 + 32]"'
 
         @v 転 '"mov "'
         @v 汲 '"lea "'
@@ -1165,7 +1165,7 @@ jobs:
         @v 幕 '"  "'
         @v 基 '"byte [mem_base + "'
         @v 閉 '"]"'
-        @v 影 '"qword [rsp + 32]"'
+        @v 影 '"qword [rsp + r12*8 + 32]"'
         @v 枠 '"qword [rsp + "'
 
         @v 転 '"mov "'
