--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1424,8 +1424,7 @@ jobs:
         $
         実(込)
         
-        外 = 系.係
-        径 = 外
+        径 = 外[1] if len(外) > 1 else 終
         本 = 開(径, モ, 号=権).読()
         生 = 本.行()
         コ = []
