--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1322,7 +1322,7 @@ jobs:
         # Compile Native Compiler script
         python stage2_compiler.py compiler_native.py1 > compiler_native.py
 
-    # 29. Create "Compiler V0" (High-Level to Native IR)
+        # 29. Create "Compiler V0" (High-Level to Native IR)
     - name: 29. Create Compiler V0
       run: |
         # Use quoted 'EOF' to protect strings
@@ -1384,11 +1384,15 @@ jobs:
 
         # Library Strings (Use Kanji to avoid conflicts)
         @v イ '"LABEL print_int"'
-        @v ロ '"RPUSH RAX"'
-        @v ハ '"MOV R12 -11"'
+        # 修正: PUSHを使わずR15(不揮発レジスタ)に退避してスタックアライメントを維持
+        @v ロ '"MOV R15 RAX"'
+        # 修正: 第一引数はR12ではなくRCXを使用 (Windows x64 ABI)
+        @v ハ '"MOV RCX -11"'
         @v ニ '"CALL GetStdHandle"'
         @v ホ '"MOV RBX RAX"'
-        @v ヘ '"POP RAX"'
+        # 修正: R15から復帰
+        @v ヘ '"MOV RAX R15"'
+        
         @v ト '"MOV RCX 10"'
         @v チ '"MOV R12 0"'
         @v リ '"RPUSH 0"'
@@ -1420,10 +1424,10 @@ jobs:
         実(込)
         
         外 = 系.係
-        径 = 外[1]
+        径 = 外
         本 = 開(径, モ, 号=権).読()
         生 = 本.行()
-        コ = []
+        コ =
 
         # Init (Dummy instruction to start)
         コ.追(置 + 空 + 弐 + 空 + 字(0))
