--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1420,6 +1420,7 @@ jobs:
         @v マ '"JMP L_PRT"'
         @v ケ '"LABEL L_END"'
         @v フ '"RET"'
+        @v 清 '"xor rdx, rdx"'
 
         $
         実(込)
@@ -1467,6 +1468,7 @@ jobs:
         表(チ)
         表(リ)
         表(ヌ)
+        表(清)
         表(ル)
         表(ヲ)
         表(ワ)
